src/snapshots/transmute__parser__tests__access_precendence.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"-a.b;\")).parse()"
---
Ok(
    Ast {
        identifiers: [
            "a",
            "b",
        ],
        identifier_refs: [
            IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(0),
                    span: 1:2; [1, 2],
                },
                bound_state: Unbound,
            },
            IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(1),
                    span: 1:4; [3, 4],
                },
                bound_state: Unbound,
            },
        ],
        expressions: [
            Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: IdentRefId(0),
                        span: 1:2; [1, 2],
                    },
                ),
                span: 1:2; [1, 2],
                typed_state: Untyped,
            },
            Expression {
                id: ExprId(1),
                kind: Access(
                    ExprId(0),
                    IdentRefId(1),
                ),
                span: 1:2; [1, 4],
                typed_state: Untyped,
            },
            Expression {
                id: ExprId(2),
                kind: Unary(
                    UnaryOperator {
                        kind: Minus,
                        span: 1:1; [0, 1],
                    },
                    ExprId(1),
                ),
                span: 1:1; [0, 4],
                typed_state: Untyped,
            },
        ],
        statements: [
            Statement {
                id: StmtId(0),
                kind: Expression(
                    ExprId(2),
                ),
                span: 1:1; [0, 5],
            },
        ],
        root: [
            StmtId(0),
        ],
        symbols: [],
        types: [],
        state: ImplicitRet,
    },
)
