src/snapshots/transmute__parser__tests__assignment.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [
            "forty_two",
        ],
        identifier_refs: [
            IdentifierRef {
                id: IdentRefId {
                    id: 0,
                },
                ident: Identifier {
                    id: IdentId {
                        id: 0,
                    },
                    span: 1:1; [0, 9],
                },
                symbol_id: None,
            },
        ],
        expressions: [
            Expression {
                id: ExprId {
                    id: 0,
                },
                kind: Literal(
                    Literal {
                        kind: Number(
                            42,
                        ),
                        span: 1:13; [12, 14],
                    },
                ),
                span: 1:13; [12, 14],
            },
            Expression {
                id: ExprId {
                    id: 1,
                },
                kind: Assignment(
                    IdentRefId {
                        id: 0,
                    },
                    ExprId {
                        id: 0,
                    },
                ),
                span: 1:1; [0, 14],
            },
        ],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Expression(
                    ExprId {
                        id: 1,
                    },
                ),
                span: 1:1; [0, 14],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `eof`, expected one of `.`, `;`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`",
                span: 1:15; [14, 14],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    1130,
                ),
            },
        ],
    },
)
