src/snapshots/transmute__parser__tests__err_expression_missing_right_parenthesis.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"(42;\")).parse()"
---
(
    Ast {
        identifiers: [],
        identifier_refs: [],
        expressions: [
            Expression {
                id: ExprId {
                    id: 0,
                },
                kind: Literal(
                    Literal {
                        kind: Number(
                            42,
                        ),
                        span: 1:2; [1, 3],
                    },
                ),
                span: 1:1; [0, 3],
            },
        ],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Expression(
                    ExprId {
                        id: 0,
                    },
                ),
                span: 1:1; [0, 4],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected `)` to close `(` at 1:1, got `;`",
                span: 1:4; [3, 4],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    625,
                ),
            },
        ],
    },
)
