src/snapshots/transmute__parser__tests__err_if_missing_close_curly_bracket.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [],
        identifier_refs: [],
        expressions: [
            Expression {
                id: ExprId {
                    id: 0,
                },
                kind: Literal(
                    Literal {
                        kind: Boolean(
                            true,
                        ),
                        span: 1:4; [3, 7],
                    },
                ),
                span: 1:4; [3, 7],
            },
            Expression {
                id: ExprId {
                    id: 1,
                },
                kind: Block(
                    [],
                ),
                span: 1:9; [8, 9],
            },
            Expression {
                id: ExprId {
                    id: 2,
                },
                kind: If(
                    ExprId {
                        id: 0,
                    },
                    ExprId {
                        id: 1,
                    },
                    None,
                ),
                span: 1:1; [0, 9],
            },
        ],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Expression(
                    ExprId {
                        id: 2,
                    },
                ),
                span: 1:1; [0, 9],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected `}` to close `{` at 1:9, got `eof`",
                span: 1:10; [9, 9],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    1190,
                ),
            },
        ],
    },
)
