src/snapshots/transmute__parser__tests__err_if_missing_condition.snap
---
source: src/parser.rs
expression: "Parser::new(Lexer::new(\"if { }\")).parse()"
---
(
    Ast {
        identifiers: [],
        identifier_refs: [],
        expressions: [
            Expression {
                id: ExprId {
                    id: 0,
                },
                kind: Dummy,
                span: 1:4; [3, 3],
            },
            Expression {
                id: ExprId {
                    id: 1,
                },
                kind: Block(
                    [],
                ),
                span: 1:4; [3, 6],
            },
            Expression {
                id: ExprId {
                    id: 2,
                },
                kind: If(
                    ExprId {
                        id: 0,
                    },
                    ExprId {
                        id: 1,
                    },
                    None,
                ),
                span: 1:1; [0, 6],
            },
        ],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Expression(
                    ExprId {
                        id: 2,
                    },
                ),
                span: 1:1; [0, 6],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `{`, expected one of identifier, number, `true`, `false`, `if`, `while`, `(`, `-`",
                span: 1:4; [3, 4],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    647,
                ),
            },
        ],
    },
)
